--- a/.github/workflows/build-openwrt-using-releases-files.yml
+++ b/.github/workflows/build-openwrt-using-releases-files.yml
@@ -1,141 +1,136 @@
-#=====================================================================================
-# https://github.com/ophub/amlogic-s9xxx-openwrt
-# Description: Build OpenWrt using specified files
-#=====================================================================================
+name: Build S905L3A ImmortalWrt 24.10.2
 
-name: Build OpenWrt for s905l3a
-
+# 触发条件：支持手动触发和推送触发
 on:
-  repository_dispatch:
-  workflow_dispatch:
-    inputs:
-      openwrt_board:
-        description: "Select device board"
-        required: false
-        default: "s905l3a"  # 默认设备为s905l3a
-        type: choice
-        options:
-          - s905l3a
-          - s905l3a-cm311
-          - s905l3a-m401a
-          # 保留其他设备选项...
-      openwrt_kernel:
-        description: "Select kernel version"
-        required: false
-        default: "6.12.y"  # 对应指定内核版本
-        type: choice
-        options:
-          - 6.12.y
-          # 保留其他内核选项...
-      auto_kernel:
-        description: "Auto use the latest kernel"
-        required: false
-        default: false  # 禁用自动内核，使用指定版本
-        type: boolean
-      kernel_repo:
-        description: "Set the kernel repository"
-        required: false
-        default: "tianteng888/flippy-kernels"  # 切换为指定内核仓库
-        type: choice
-        options:
-          - tianteng888/flippy-kernels
-      kernel_usage:
-        description: "Set the tags of the kernel"
-        required: false
-        default: "neih"  # 使用指定内核的tag
-        type: choice
-        options:
-          - neih
-      # 保留其他输入参数...
+  workflow_dispatch:  # 允许手动触发
+  push:
+    branches: [ main ]
+    paths:
+      - '.github/workflows/build-s905l3a.yml'  # 只有当此文件变更时才触发
 
 env:
-  TZ: America/New_York
-  IMMORTALWRT_ROOTFS_URL: "https://downloads.immortalwrt.org/releases/24.10.2/targets/armsr/armv8/immortalwrt-24.10.2-armsr-armv8-rootfs.tar.gz"
-  KERNEL_FILE: "6.12.41-flippy-93+.tar.gz"
+  TZ: Asia/Shanghai
+  # 基础配置
+  DEVICE: "s905l3a"
+  IMMORTALWRT_VERSION: "24.10.2"
+  KERNEL_VERSION: "6.12.41-flippy-93+"
+  # 资源链接
+  ROOTFS_URL: "https://downloads.immortalwrt.org/releases/${{ env.IMMORTALWRT_VERSION }}/targets/armsr/armv8/immortalwrt-${{ env.IMMORTALWRT_VERSION }}-armsr-armv8-rootfs.tar.gz"
+  KERNEL_URL: "https://github.com/tianteng888/flippy-kernels/releases/download/neih/${{ env.KERNEL_VERSION }}.tar.gz"
 
 jobs:
   build:
     runs-on: ubuntu-22.04
-    if: ${{ github.event.repository.owner.id }} == ${{ github.event.sender.id }}
+    name: Build OpenWrt for ${{ env.DEVICE }}
+    timeout-minutes: 60  # 设置超时时间
 
     steps:
-      - name: Checkout
+      - name: 检查工作流权限
+        run: |
+          echo "当前仓库: ${{ github.repository }}"
+          echo "触发用户: ${{ github.actor }}"
+          echo "工作流权限: ${{ toJson(github.token) != '' }}"
+
+      - name: 检出代码
         uses: actions/checkout@v4
-
-      - name: Initialization environment
-        id: init
-        # 保留原环境初始化步骤...
-
-      - name: Create simulated physical disk
-        # 保留原磁盘创建步骤...
-
-      - name: Download specified OpenWrt rootfs
-        id: down
-        working-directory: /builder
-        if: ${{ steps.init.outputs.status }} == 'success' && !cancelled()
-        run: |
-          # 创建输出目录
-          armsr_tarfile_path="openwrt/output"
-          mkdir -p ${armsr_tarfile_path}
-          
-          # 下载指定版本的ImmortalWrt rootfs
-          openwrt_filename="${IMMORTALWRT_ROOTFS_URL##*/}"
-          echo "Downloading rootfs: ${IMMORTALWRT_ROOTFS_URL}"
-          curl -fsSL --retry 3 "${IMMORTALWRT_ROOTFS_URL}" -o "${armsr_tarfile_path}/${openwrt_filename}"
-          if [[ $? -ne 0 ]]; then
-              echo "Failed to download rootfs"
-              exit 1
-          fi
-
-          # 修复opkg源（解决链接失效问题）
-          mkdir -p openwrt/tmp
-          tar -zxf "${armsr_tarfile_path}/${openwrt_filename}" -C openwrt/tmp
-          # 替换为24.10.2版本对应的opkg源
-          cat > openwrt/tmp/etc/opkg/distfeeds.conf << EOF
-          src/gz immortalwrt_core https://downloads.immortalwrt.org/releases/24.10.2/targets/armsr/armv8/packages
-          src/gz immortalwrt_base https://downloads.immortalwrt.org/releases/24.10.2/packages/aarch64_cortex-a53/base
-          src/gz immortalwrt_luci https://downloads.immortalwrt.org/releases/24.10.2/packages/aarch64_cortex-a53/luci
-          src/gz immortalwrt_packages https://downloads.immortalwrt.org/releases/24.10.2/packages/aarch64_cortex-a53/packages
-          src/gz immortalwrt_routing https://downloads.immortalwrt.org/releases/24.10.2/packages/aarch64_cortex-a53/routing
-          src/gz immortalwrt_telephony https://downloads.immortalwrt.org/releases/24.10.2/packages/aarch64_cortex-a53/telephony
-          EOF
-          # 重新打包rootfs
-          rm -f "${armsr_tarfile_path}/${openwrt_filename}"
-          tar -zcf "${armsr_tarfile_path}/${openwrt_filename}" -C openwrt/tmp .
-
-          # 设置构建标签
-          echo "build_tag=ImmortalWrt_24.10.2_s905l3a_$(date +"%Y%m%d")" >> ${GITHUB_OUTPUT}
-          echo "TAGS_NAME=immortalwrt-24.10.2" >> ${GITHUB_OUTPUT}
-          echo "REPO_URL=https://downloads.immortalwrt.org/releases/24.10.2/" >> ${GITHUB_OUTPUT}
-          echo "status=success" >> ${GITHUB_OUTPUT}
-
-      - name: Download specified kernel
-        id: kernel
-        working-directory: /builder
-        if: ${{ steps.down.outputs.status }} == 'success' && !cancelled()
-        run: |
-          # 下载指定内核文件
-          kernel_url="https://github.com/${{ inputs.kernel_repo }}/releases/download/${{ inputs.kernel_usage }}/${KERNEL_FILE}"
-          echo "Downloading kernel: ${kernel_url}"
-          curl -fsSL --retry 3 "${kernel_url}" -o "openwrt/kernel.tar.gz"
-          if [[ $? -ne 0 ]]; then
-              echo "Failed to download kernel"
-              exit 1
-          fi
-          echo "status=success" >> ${GITHUB_OUTPUT}
-
-      - name: Packaging OpenWrt
-        if: ${{ steps.kernel.outputs.status }} == 'success' && !cancelled()
-        uses: ophub/amlogic-s9xxx-openwrt@main
         with:
-          openwrt_path: openwrt/output/*rootfs.tar.gz
-          openwrt_board: ${{ inputs.openwrt_board }}
-          openwrt_kernel: ${{ inputs.openwrt_kernel }}
-          auto_kernel: ${{ inputs.auto_kernel }}
-          kernel_repo: ${{ inputs.kernel_repo }}
-          kernel_usage: ${{ inputs.kernel_usage }}
-          # 传递本地内核文件路径（如果打包工具支持）
-          kernel_path: openwrt/kernel.tar.gz
+          fetch-depth: 1
 
-      - name: Upload the packaged OpenWrt
-        # 保留原上传步骤...
+      - name: 初始化构建环境
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y build-essential libncurses5-dev zlib1g-dev \
+            gawk git gettext libssl-dev xsltproc wget unzip curl file qemu-utils \
+            parted dosfstools e2fsprogs
+
+      - name: 创建工作目录
+        run: |
+          mkdir -p ~/openwrt/{rootfs,kernel,output}
+          echo "工作目录创建完成"
+
+      - name: 下载Rootfs文件
+        id: download_rootfs
+        run: |
+          echo "开始下载Rootfs: ${{ env.ROOTFS_URL }}"
+          wget -c --timeout=30 --tries=5 -O ~/openwrt/rootfs/rootfs.tar.gz ${{ env.ROOTFS_URL }}
+          
+          if [ $? -ne 0 ]; then
+            echo "Rootfs下载失败，尝试备用源"
+            # 备用源1
+            wget -c --timeout=30 --tries=5 -O ~/openwrt/rootfs/rootfs.tar.gz https://mirror.immortalwrt.org/releases/${{ env.IMMORTALWRT_VERSION }}/targets/armsr/armv8/immortalwrt-${{ env.IMMORTALWRT_VERSION }}-armsr-armv8-rootfs.tar.gz
+          fi
+          
+          if [ ! -f ~/openwrt/rootfs/rootfs.tar.gz ]; then
+            echo "所有源都下载失败"
+            exit 1
+          fi
+          
+          echo "Rootfs下载完成，大小: $(du -h ~/openwrt/rootfs/rootfs.tar.gz | awk '{print $1}')"
+
+      - name: 修复OPKG源
+        run: |
+          echo "解压Rootfs以修复OPKG源"
+          mkdir -p ~/openwrt/rootfs/tmp
+          tar -zxf ~/openwrt/rootfs/rootfs.tar.gz -C ~/openwrt/rootfs/tmp
+          
+          echo "替换OPKG源"
+          cat > ~/openwrt/rootfs/tmp/etc/opkg/distfeeds.conf << EOF
+          src/gz immortalwrt_core https://downloads.immortalwrt.org/releases/${{ env.IMMORTALWRT_VERSION }}/targets/armsr/armv8/packages
+          src/gz immortalwrt_base https://downloads.immortalwrt.org/releases/${{ env.IMMORTALWRT_VERSION }}/packages/aarch64_cortex-a53/base
+          src/gz immortalwrt_luci https://downloads.immortalwrt.org/releases/${{ env.IMMORTALWRT_VERSION }}/packages/aarch64_cortex-a53/luci
+          src/gz immortalwrt_packages https://downloads.immortalwrt.org/releases/${{ env.IMMORTALWRT_VERSION }}/packages/aarch64_cortex-a53/packages
+          src/gz immortalwrt_routing https://downloads.immortalwrt.org/releases/${{ env.IMMORTALWRT_VERSION }}/packages/aarch64_cortex-a53/routing
+          src/gz immortalwrt_telephony https://downloads.immortalwrt.org/releases/${{ env.IMMORTALWRT_VERSION }}/packages/aarch64_cortex-a53/telephony
+          EOF
+          
+          echo "重新打包Rootfs"
+          rm -f ~/openwrt/rootfs/rootfs.tar.gz
+          tar -zcf ~/openwrt/rootfs/rootfs.tar.gz -C ~/openwrt/rootfs/tmp .
+
+      - name: 下载内核文件
+        id: download_kernel
+        run: |
+          echo "开始下载内核: ${{ env.KERNEL_URL }}"
+          wget -c --timeout=30 --tries=5 -O ~/openwrt/kernel/kernel.tar.gz ${{ env.KERNEL_URL }}
+          
+          if [ ! -f ~/openwrt/kernel/kernel.tar.gz ]; then
+            echo "内核下载失败"
+            exit 1
+          fi
+          
+          echo "内核下载完成，大小: $(du -h ~/openwrt/kernel/kernel.tar.gz | awk '{print $1}')"
+          tar -zxf ~/openwrt/kernel/kernel.tar.gz -C ~/openwrt/kernel/
+
+      - name: 构建镜像
+        id: build_image
+        run: |
+          echo "开始构建${{ env.DEVICE }}镜像"
+          
+          # 克隆构建脚本
+          git clone https://github.com/ophub/amlogic-s9xxx-openwrt.git ~/amlogic-script
+          cd ~/amlogic-script
+          
+          # 执行构建
+          sudo bash -x build-openwrt.sh \
+            -d ${{ env.DEVICE }} \
+            -f ~/openwrt/rootfs/rootfs.tar.gz \
+            -k ~/openwrt/kernel \
+            -o ~/openwrt/output \
+            -t ext4 \
+            -s 1024
+          
+          # 检查输出
+          echo "构建输出文件:"
+          ls -lh ~/openwrt/output/
+          
+          # 记录输出文件名
+          OUTPUT_FILE=$(ls ~/openwrt/output/*.img | head -n 1)
+          echo "output_file=$OUTPUT_FILE" >> $GITHUB_OUTPUT
+
+      - name: 上传构建结果
+        uses: actions/upload-artifact@v4
+        if: steps.build_image.outputs.output_file != ''
+        with:
+          name: ${{ env.DEVICE }}-immortalwrt-${{ env.IMMORTALWRT_VERSION }}
+          path: ${{ steps.build_image.outputs.output_file }}
+          retention-days: 7
